updated playbook to run the container

--- a/ansible-deploy-config/deploy-playbook.yml
+++ b/ansible-deploy-config/deploy-playbook.yml
@@ -6,3 +6,6 @@
       docker_image:
         name: dhamodhar7/sci_calc_spe_mini
         source: pull
+
+    - name: Run the container
+      shell: docker run -it -d dhamodhar7/sci_calc_spe_mini
